tests/ui/consts/required-consts/collect-in-dead-move.noopt.stderr
error[E0080]: evaluation of `Fail::<i32>::C` failed
  --> $DIR/collect-in-dead-move.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation panicked: explicit panic

note: erroneous constant encountered
  --> $DIR/collect-in-dead-move.rs:16:17
   |
LL |         let _ = Fail::<T>::C;
   |                 ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <Fail<i32> as std::ops::Drop>::drop`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
